--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+server.port=8080
 
+spring.datasource.url=jdbc:h2:file:./datasource/main_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=db_admin
+spring.datasource.password=Admin_123!
+spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
+spring.jpa.showSql=true
+spring.sql.init.mode=always
+spring.h2.console.enabled=false
