--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
 spring.jpa.showSql=true
 spring.sql.init.mode=always
 spring.h2.console.enabled=false
+
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
