--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.h2.console.enabled=false
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
+
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5673
+#spring.rabbitmq.username=admin
+#spring.rabbitmq.password=admin
