update - 10.11.2023 little upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.servlet.multipart.max-request-size=-1
 #spring.rabbitmq.port=5673
 #spring.rabbitmq.username=admin
 #spring.rabbitmq.password=admin
+spring.rabbitmq.template.exchange=default.passcode
+#spring.rabbitmq.template.routing-key=passcode.all
