--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
 
 #spring.rabbitmq.host=localhost
-#spring.rabbitmq.port=5673
-#spring.rabbitmq.username=admin
-#spring.rabbitmq.password=admin
-spring.rabbitmq.template.exchange=default.passcode
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.username=guest
+#spring.rabbitmq.password=guest
+#spring.rabbitmq.template.exchange=default.passcode
 #spring.rabbitmq.template.routing-key=passcode.all
+spring.rabbitmq.template.receive-timeout=30000
