update 11.11.2023 - rebuild on postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,6 @@ spring.servlet.multipart.max-request-size=-1
 #spring.rabbitmq.template.exchange=default.passcode
 #spring.rabbitmq.template.routing-key=passcode.all
 spring.rabbitmq.template.receive-timeout=30000
+
+message.incoming=result_queue
+message.outgoing=analize_queue
