update - 13.11.2023 in progress ...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,10 +11,11 @@ spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQLDialect
 #spring.datasource.username=db_admin
 #spring.datasource.password=Admin_123!
 #spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=false
 
 spring.jpa.showSql=true
 spring.sql.init.mode=always
-spring.h2.console.enabled=false
+
 
 spring.servlet.multipart.max-file-size=-1
 spring.servlet.multipart.max-request-size=-1
