--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 server.port=8080
 
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/main_db
-#spring.datasource.username=postgres
-#spring.datasource.password=secret
-#spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/main_db
+spring.datasource.username=postgres
+spring.datasource.password=secret
+spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:h2:file:./datasource/main_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=db_admin
-spring.datasource.password=Admin_123!
-spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=false
+#spring.datasource.url=jdbc:h2:file:./datasource/main_db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=db_admin
+#spring.datasource.password=Admin_123!
+#spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
+#spring.h2.console.enabled=false
 
 spring.jpa.showSql=true
 spring.sql.init.mode=always
