--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/main_db
+spring.datasource.url=jdbc:postgresql://postgres-docker:5432/main_db
 spring.datasource.username=postgres
 spring.datasource.password=secret
 spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQLDialect
