--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 server.port=8080
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://localhost:5432/main_db
-spring.datasource.url=jdbc:postgresql://212.113.117.109:5432/main_db
-spring.datasource.username=postgres
-spring.datasource.password=secret
-spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQLDialect
+#spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/main_db
+#spring.datasource.username=postgres
+#spring.datasource.password=secret
+#spring.jpa.databasePlatform=org.hibernate.dialect.PostgreSQLDialect
 
-#spring.datasource.url=jdbc:h2:file:./datasource/main_db
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=db_admin
-#spring.datasource.password=Admin_123!
-#spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
-#spring.h2.console.enabled=false
+spring.datasource.url=jdbc:h2:file:./datasource/main_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=db_admin
+spring.datasource.password=Admin_123!
+spring.jpa.databasePlatform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=false
 
 spring.jpa.showSql=true
 spring.sql.init.mode=always
